infra/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: set-in-overlay
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - set-in-overlay
      secretName: github-webhook-tls
